fixed overflow in nav and added default top scroll to all pages

--- a/react-app/src/components/Navigation/Navigation.css
+++ b/react-app/src/components/Navigation/Navigation.css
@@ -303,6 +303,13 @@ nav .searchBarButton{
   min-width:130px;
 }
 
+.locationButton {
+  text-overflow: ellipsis;
+  overflow-x:hidden;
+  padding:5px;
+  overflow-y:visible;
+}
+
 @media screen and (max-width: 970px) {
   #select-search {
     display:none;
